# Wish-A-Day

./: .gitignore  DEPLOYMENT_FIX.md  fix-permissions.sh  fix-production-404.sh  fix_import_issue.sh  nginx-fix.sh  pyproject.toml  server.sh  serverv2.sh  serverv3.sh  ubuntuserverinstallandsetup.sh
app/: main.py  models.py  schemas.py
app/routes/: wishes.py
app/services/: cleanup.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css
frontend/src/components/: ExpirySelector.tsx  ImageUploader.tsx  ProgressSteps.tsx  QRCodeCard.tsx  ShareLink.tsx  ThemeSelector.tsx  ThemeToggle.tsx  WishCard.tsx
frontend/src/components/animations/: CelebrationEffects.tsx  CinematicThemeEffects.tsx  ConfettiCannon.tsx  EnhancedShareCapture.tsx  GiftBox3D.tsx  GiftImagePopup.tsx  GlassmorphicCard.tsx  InteractiveParticles.tsx  PhotoGallery.tsx  SocialSharePanel.tsx  SparkleTrail.tsx  ThemeAnimations.tsx  WishDayBranding.tsx  index.ts
frontend/src/hooks/: useHaptics.ts  useOGMeta.ts  useSound.ts  useThemeMusic.ts
frontend/src/pages/: CreateWish.tsx  WishView.tsx
frontend/src/services/: api.ts
frontend/src/src/: App.tsx
frontend/src/src/components/: CelebrationItems.tsx  FormSection.tsx  ImageUploadDisclaimer.tsx  ImageUploader.tsx  MusicToggle.tsx  QRCodeCard.tsx  SenderInfo.tsx  WishCard.tsx
frontend/src/src/hooks/: index.ts  useOGMeta.ts  useThemeMusic.ts
frontend/src/src/lib/: utils.ts
frontend/src/src/pages/: CreateWish.tsx  Home.tsx  NotFound.tsx  (+1 more)
scripts/: add_sender_fields.py
tests/: test_sender_info.py
(+16 files in other folders)
